--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "rd -r public\\scripts 2>null & tsc",
     "dev": "rd -r public\\scripts 2>null & tsc -p tsconfig-dev.json",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.7",
+    "lodash.debounce": "^4.0.8",
     "luxon": "^2.2.0"
   }
 }
