--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es2015",
     "module": "es2015",
     "moduleResolution": "node",
-//    "allowJs": true,
+    "allowJs": true,
 //    "esModuleInterop": true,
 //    "allowSyntheticDefaultImports": true,
 //    "isolatedModules": true,
@@ -14,7 +14,10 @@
       "/lib/luxon/es6/luxon.js": ["node_modules/luxon"],
     }
   },
-  "files": [
-    "src/index.ts"
-  ],
+//  "files": [
+//    "src/index.ts"
+//  ],
+  "include": [
+    "src/**/*"
+  ]
 }
